kubernetes/overlays/local_dev/kubernetes_files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opal-ingress
  namespace: jupyterhub
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    ingress.kubernetes.io/protocol: https
spec:
  rules:
    - host: minio-k8.10.96.30.9.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9002
    - host: keycloak-k8.10.96.30.9.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
    - host: opal-k8.10.96.30.9.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy-public
                port:
                  number: 80
    - host: metaflow-k8.10.96.30.9.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opal-metaflow-ui-static
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: opal-metaflow-ui
                port:
                  number: 8083
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: opal-metaflow-ui-static
                port:
                  number: 3000
